@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2004, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,11 +22,44 @@
  */
 
 /*
+ * @test
  * @bug     4530538
  * @summary Basic unit test of RuntimeMXBean.getInputArguments().
  *
  * @author  Mandy Chung
  *
+ * @run main InputArgument
+ */
+
+/*
+ * @test
+ * @bug     4530538
+ * @summary Basic unit test of RuntimeMXBean.getInputArguments().
+ *
+ * @author  Mandy Chung
+ *
+ * @run main/othervm -XX:+UseFastJNIAccessors -Xlog:gc*=debug InputArgument
+ */
+
+/*
+ * @test
+ * @bug     4530538
+ * @summary Basic unit test of RuntimeMXBean.getInputArguments().
+ *
+ * @author  Mandy Chung
+ *
+ * @run main/othervm -XX:+UseFastJNIAccessors -Xlog:gc*=debug InputArgument
+ * -XX:+UseFastJNIAccessors
+ */
+
+/*
+ * @test
+ * @bug     4530538
+ * @summary Basic unit test of RuntimeMXBean.getInputArguments().
+ *
+ * @author  Mandy Chung
+ *
+ * @run main/othervm -Dprops=something InputArgument -Dprops=something
  */
 
 import java.lang.management.*;
