@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,9 +21,6 @@
  * questions.
  */
 
-import com.sun.net.httpserver.HttpServer;
-import com.sun.net.httpserver.HttpsConfigurator;
-import com.sun.net.httpserver.HttpsServer;
 import jdk.test.lib.net.IPSupport;
 import jdk.test.lib.net.SimpleSSLContext;
 import org.testng.Assert;
@@ -33,44 +30,47 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import javax.net.ssl.SSLContext;
+import java.io.Closeable;
 import java.net.InetAddress;
-import java.net.InetSocketAddress;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Predicate;
+import java.util.function.Supplier;
+
+import jdk.httpclient.test.lib.common.HttpServerAdapters;
+import static java.net.http.HttpClient.Version.HTTP_1_1;
+import static java.net.http.HttpClient.Version.HTTP_2;
 
 /*
  * @test
  * @summary Tests HttpClient usage when configured with a local address to bind
  *          to, when sending requests
  * @bug 8209137
- * @modules jdk.httpserver
- *          java.net.http/jdk.internal.net.http.common
- *          java.net.http/jdk.internal.net.http.frame
- *          java.base/sun.net.www.http
- *          java.net.http/jdk.internal.net.http.hpack
+ * @library /test/lib /test/jdk/java/net/httpclient/lib
  *
- * @library /test/lib http2/server
- *
- * @build jdk.test.lib.net.SimpleSSLContext jdk.test.lib.net.IPSupport HttpServerAdapters
+ * @build jdk.test.lib.net.SimpleSSLContext jdk.test.lib.net.IPSupport
+ *        jdk.httpclient.test.lib.common.HttpServerAdapters
  *
  * @run testng/othervm
  *      -Djdk.httpclient.HttpClient.log=frames,ssl,requests,responses,errors
  *      -Djdk.internal.httpclient.debug=true
+ *      -Dsun.net.httpserver.idleInterval=50000
  *      HttpClientLocalAddrTest
  *
  * @run testng/othervm/java.security.policy=httpclient-localaddr-security.policy
  *      -Djdk.httpclient.HttpClient.log=frames,ssl,requests,responses,errors
  *      -Djdk.internal.httpclient.debug=true
+ *      -Dsun.net.httpserver.idleInterval=50000
+ *      -Djdk.tracePinnedThreads=full
  *      HttpClientLocalAddrTest
  *
  */
@@ -85,6 +85,7 @@ public class HttpClientLocalAddrTest implements HttpServerAdapters {
     private static URI http2URI;
     private static HttpServerAdapters.HttpTestServer https2_Server;
     private static URI https2URI;
+    private static final AtomicInteger IDS = new AtomicInteger();
 
     // start various HTTP/HTTPS servers that will be invoked against in the tests
     @BeforeClass
@@ -108,30 +109,26 @@ public class HttpClientLocalAddrTest implements HttpServerAdapters {
         };
 
         // HTTP/1.1 - create servers with http and https
-        final var sa = new InetSocketAddress(InetAddress.getLoopbackAddress(), 0);
-        final int backlog = 0;
-        http1_1_Server = HttpServerAdapters.HttpTestServer.of(HttpServer.create(sa, backlog));
+        http1_1_Server = HttpServerAdapters.HttpTestServer.create(HTTP_1_1);
         http1_1_Server.addHandler(handler, "/");
         http1_1_Server.start();
         System.out.println("Started HTTP v1.1 server at " + http1_1_Server.serverAuthority());
         httpURI = new URI("http://" + http1_1_Server.serverAuthority() + "/");
 
-        final HttpsServer httpsServer = HttpsServer.create(sa, 0);
-        httpsServer.setHttpsConfigurator(new HttpsConfigurator(sslContext));
-        https_1_1_Server = HttpServerAdapters.HttpTestServer.of(httpsServer);
+        https_1_1_Server = HttpServerAdapters.HttpTestServer.create(HTTP_1_1, sslContext);
         https_1_1_Server.addHandler(handler, "/");
         https_1_1_Server.start();
         System.out.println("Started HTTPS v1.1 server at " + https_1_1_Server.serverAuthority());
         httpsURI = new URI("https://" + https_1_1_Server.serverAuthority() + "/");
 
         // HTTP/2 - create servers with http and https
-        http2_Server = HttpServerAdapters.HttpTestServer.of(new Http2TestServer(sa.getHostString(), false, null));
+        http2_Server = HttpServerAdapters.HttpTestServer.create(HTTP_2);
         http2_Server.addHandler(handler, "/");
         http2_Server.start();
         System.out.println("Started HTTP v2 server at " + http2_Server.serverAuthority());
         http2URI = new URI("http://" + http2_Server.serverAuthority() + "/");
 
-        https2_Server = HttpServerAdapters.HttpTestServer.of(new Http2TestServer(sa.getHostString(), true, sslContext));
+        https2_Server = HttpServerAdapters.HttpTestServer.create(HTTP_2, sslContext);
         https2_Server.addHandler(handler, "/");
         https2_Server.start();
         System.out.println("Started HTTPS v2 server at " + https2_Server.serverAuthority());
@@ -188,13 +185,13 @@ public class HttpClientLocalAddrTest implements HttpServerAdapters {
             final var configureClientSSL = requiresSSLContext.test(requestURI);
             // no localAddr set
             testMethodParams.add(new Object[]{
-                    newBuilder(configureClientSSL).build(),
+                    newBuilder(configureClientSSL).provider(),
                     requestURI,
                     null
             });
             // null localAddr set
             testMethodParams.add(new Object[]{
-                    newBuilder(configureClientSSL).localAddress(null).build(),
+                    newBuilder(configureClientSSL).localAddress(null).provider(),
                     requestURI,
                     null
             });
@@ -203,7 +200,7 @@ public class HttpClientLocalAddrTest implements HttpServerAdapters {
             testMethodParams.add(new Object[]{
                     newBuilder(configureClientSSL)
                             .localAddress(loopbackAddr)
-                            .build(),
+                            .provider(),
                     requestURI,
                     loopbackAddr
             });
@@ -214,7 +211,7 @@ public class HttpClientLocalAddrTest implements HttpServerAdapters {
                 testMethodParams.add(new Object[]{
                         newBuilder(configureClientSSL)
                                 .localAddress(localAddr)
-                                .build(),
+                                .provider(),
                         requestURI,
                         localAddr
                 });
@@ -225,7 +222,7 @@ public class HttpClientLocalAddrTest implements HttpServerAdapters {
                 testMethodParams.add(new Object[]{
                         newBuilder(configureClientSSL)
                                 .localAddress(localAddr)
-                                .build(),
+                                .provider(),
                         requestURI,
                         localAddr
                 });
@@ -234,7 +231,92 @@ public class HttpClientLocalAddrTest implements HttpServerAdapters {
         return testMethodParams.stream().toArray(Object[][]::new);
     }
 
-    private static HttpClient.Builder newBuilder(boolean configureClientSSL) {
+    // An object that holds a client and that can be closed
+    // Used when closing the client might require closing additional
+    // resources, such as an executor
+    sealed interface ClientCloseable extends Closeable {
+
+        HttpClient client();
+
+        @Override
+        void close();
+
+        // a reusable client that does nothing when close() is called,
+        // so that the underlying client can be reused
+        record ReusableClient(HttpClient client) implements ClientCloseable {
+            // do not close the client so that it can be reused
+            @Override
+            public void close() { }
+        }
+
+        // a client configured with an executor, that closes both the client
+        // and the executor when close() is called
+        record ClientWithExecutor(HttpClient client, ExecutorService service)
+                implements ClientCloseable {
+            // close both the client and executor
+            @Override
+            public void close() {
+                client.close();
+                service.close();
+            }
+        }
+
+        static ReusableClient reusable(HttpClient client) {
+            return new ReusableClient(client);
+        }
+
+        static ClientWithExecutor withExecutor(HttpClient client, ExecutorService service) {
+            return new ClientWithExecutor(client, service);
+        }
+    }
+
+    // A supplier of ClientCloseable
+    sealed interface ClientProvider extends Supplier<ClientCloseable> {
+
+        ClientCloseable get();
+
+        // a ClientProvider that returns reusable clients wrapping the given clieny
+        record ReusableClientProvider(HttpClient client) implements ClientProvider {
+            @Override
+            public ClientCloseable get() {
+                return ClientCloseable.reusable(client);
+            }
+        }
+
+        // A ClientProvider that builds a new ClientWithExecutor for every call to get()
+        record ClientBuilder(HttpClient.Builder builder) implements ClientProvider {
+            ClientCloseable build() {
+                int id = IDS.getAndIncrement();
+                ExecutorService virtualExecutor = Executors.newThreadPerTaskExecutor(Thread.ofVirtual()
+                        .name("HttpClient-" + id + "-Worker", 0).factory());
+                builder.executor(virtualExecutor);
+                return ClientCloseable.withExecutor(builder.build(), virtualExecutor);
+            }
+
+            public ClientBuilder localAddress(InetAddress localAddress) {
+                builder.localAddress(localAddress);
+                return this;
+            }
+
+            public ClientProvider provider() { return this; }
+
+            @Override
+            public ClientCloseable get() { return build(); }
+        }
+
+        static ReusableClientProvider reusable(HttpClient client) {
+            return new ReusableClientProvider(client);
+        }
+
+        static ClientBuilder builder(HttpClient.Builder builder) {
+            return new ClientBuilder(builder);
+        }
+    }
+
+
+
+
+    private static ClientProvider.ClientBuilder newBuilder(boolean configureClientSSL) {
         var builder = HttpClient.newBuilder();
         // don't let proxies interfere with the client addresses received on the
         // HTTP request, by the server side handler used in this test.
@@ -242,7 +324,7 @@ public class HttpClientLocalAddrTest implements HttpServerAdapters {
         if (configureClientSSL) {
             builder.sslContext(sslContext);
         }
-        return builder;
+        return ClientProvider.builder(builder);
     }
 
     /**
@@ -252,17 +334,20 @@ public class HttpClientLocalAddrTest implements HttpServerAdapters {
      * {@code client}
      */
     @Test(dataProvider = "params")
-    public void testSend(HttpClient client, URI requestURI, InetAddress localAddress) throws Exception {
-        System.out.println("Testing using a HTTP client " + client.version() + " with local address " + localAddress
-                + " against request URI " + requestURI);
-        // GET request
-        var req = HttpRequest.newBuilder(requestURI).build();
-        var resp = client.send(req, HttpResponse.BodyHandlers.ofByteArray());
-        Assert.assertEquals(resp.statusCode(), 200, "Unexpected status code");
-        // verify the address only if a specific one was set on the client
-        if (localAddress != null && !localAddress.isAnyLocalAddress()) {
-            Assert.assertEquals(resp.body(), localAddress.getAddress(),
-                    "Unexpected client address seen by the server handler");
+    public void testSend(ClientProvider clientProvider, URI requestURI, InetAddress localAddress) throws Exception {
+        try (var c = clientProvider.get()) {
+            HttpClient client = c.client();
+            System.out.println("Testing using a HTTP client " + client.version() + " with local address " + localAddress
+                    + " against request URI " + requestURI);
+            // GET request
+            var req = HttpRequest.newBuilder(requestURI).build();
+            var resp = client.send(req, HttpResponse.BodyHandlers.ofByteArray());
+            Assert.assertEquals(resp.statusCode(), 200, "Unexpected status code");
+            // verify the address only if a specific one was set on the client
+            if (localAddress != null && !localAddress.isAnyLocalAddress()) {
+                Assert.assertEquals(resp.body(), localAddress.getAddress(),
+                        "Unexpected client address seen by the server handler");
+            }
         }
     }
 
@@ -273,34 +358,42 @@ public class HttpClientLocalAddrTest implements HttpServerAdapters {
      * {@code client}
      */
     @Test(dataProvider = "params")
-    public void testSendAsync(HttpClient client, URI requestURI, InetAddress localAddress) throws Exception {
-        System.out.println("Testing using a HTTP client " + client.version() + " with local address " + localAddress
-                + " against request URI " + requestURI);
-        // GET request
-        var req = HttpRequest.newBuilder(requestURI).build();
-        var cf = client.sendAsync(req,
-                HttpResponse.BodyHandlers.ofByteArray());
-        var resp = cf.get();
-        Assert.assertEquals(resp.statusCode(), 200, "Unexpected status code");
-        // verify the address only if a specific one was set on the client
-        if (localAddress != null && !localAddress.isAnyLocalAddress()) {
-            Assert.assertEquals(resp.body(), localAddress.getAddress(),
-                    "Unexpected client address seen by the server handler");
+    public void testSendAsync(ClientProvider clientProvider, URI requestURI, InetAddress localAddress) throws Exception {
+        try (var c = clientProvider.get()) {
+            HttpClient client = c.client();
+            System.out.println("Testing using a HTTP client " + client.version()
+                    + " with local address " + localAddress
+                    + " against request URI " + requestURI);
+            // GET request
+            var req = HttpRequest.newBuilder(requestURI).build();
+            var cf = client.sendAsync(req,
+                    HttpResponse.BodyHandlers.ofByteArray());
+            var resp = cf.get();
+            Assert.assertEquals(resp.statusCode(), 200, "Unexpected status code");
+            // verify the address only if a specific one was set on the client
+            if (localAddress != null && !localAddress.isAnyLocalAddress()) {
+                Assert.assertEquals(resp.body(), localAddress.getAddress(),
+                        "Unexpected client address seen by the server handler");
+            }
         }
     }
 
     /**
-     * Invokes the {@link #testSend(HttpClient)} and {@link #testSendAsync(HttpClient)}
+     * Invokes the {@link #testSend} and {@link #testSendAsync}
      * tests, concurrently in multiple threads to verify that the correct local address
      * is used when multiple concurrent threads are involved in sending requests from
      * the {@code client}
      */
     @Test(dataProvider = "params")
-    public void testMultiSendRequests(HttpClient client, URI requestURI, InetAddress localAddress) throws Exception {
+    public void testMultiSendRequests(ClientProvider clientProvider,
+                                      URI requestURI,
+                                      InetAddress localAddress) throws Exception {
         int numThreads = 4;
         ExecutorService executor = Executors.newFixedThreadPool(numThreads);
         List<Future<Void>> taskResults = new ArrayList<>();
-        try {
+        try (var c = clientProvider.get()) {
+            // prevents testSend/testSendAsync from closing the client
+            ClientProvider client = ClientProvider.reusable(c.client());
             for (int i = 0; i < numThreads; i++) {
                 final var currentIdx = i;
                 var f = executor.submit(new Callable<Void>() {
@@ -326,4 +419,3 @@ public class HttpClientLocalAddrTest implements HttpServerAdapters {
         }
     }
 }
-
